[gd_scene load_steps=6 format=3 uid="uid://jpfohjr0e8nv"]

[ext_resource type="Script" uid="uid://cocec7gcywhnm" path="res://scenes/level_editor/level_editor.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://lighting_editor_panel" path="res://scenes/level_editor/lighting_editor_panel.tscn" id="2_lighting_panel"]
[ext_resource type="PackedScene" path="res://scenes/ui/slider_spin_box.tscn" id="3_slider_spin_box"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[node name="LevelEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.07058824, 0.101960786, 1)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="Header" type="HBoxContainer" parent="MainContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/VBox/Header"]
layout_mode = 2
text = "Level Editor"

[node name="Spacer" type="Control" parent="MainContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "New"

[node name="LoadButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Load"

[node name="SaveButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Save"

[node name="Separator1" type="VSeparator" parent="MainContainer/VBox/Header"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Export JSON"

[node name="ImportButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Import JSON"

[node name="Separator2" type="VSeparator" parent="MainContainer/VBox/Header"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Success"
text = "Play Level"

[node name="CloseButton" type="Button" parent="MainContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Danger"
text = "Close"

[node name="ContentSplit" type="HSplitContainer" parent="MainContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 350

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BoxContainerSpaced"

[node name="MetadataPanel" type="PanelContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel"]
layout_mode = 2

[node name="MetadataVBox" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="MetadataTitle" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox"]
layout_mode = 2
theme_type_variation = &"SectionHeader"
text = "Level Info"

[node name="NameRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox/NameRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Name:"

[node name="LevelNameEdit" type="LineEdit" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox/NameRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Level name..."

[node name="AuthorRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox"]
layout_mode = 2

[node name="AuthorLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox/AuthorRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Author:"

[node name="AuthorEdit" type="LineEdit" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox/AuthorRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Author name..."

[node name="DescLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Description:"

[node name="LevelDescriptionEdit" type="TextEdit" parent="MainContainer/VBox/ContentSplit/LeftPanel/MetadataPanel/MetadataVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Level description..."

[node name="MapPanel" type="PanelContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel"]
layout_mode = 2

[node name="MapVBox" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="MapTitle" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2
theme_type_variation = &"SectionHeader"
text = "Map"

[node name="MapRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2

[node name="MapPathLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Body"
text = "No map selected"

[node name="SelectMapButton" type="Button" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapRow"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Select Map..."

[node name="MapTransformLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2
theme_type_variation = &"H3"
text = "Map Transform"

[node name="MapOffsetRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2

[node name="OffsetLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Offset:"

[node name="XLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "X:"

[node name="MapOffsetXSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="YLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Y:"

[node name="MapOffsetYSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="ZLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Z:"

[node name="MapOffsetZSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapOffsetRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="MapScaleRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2

[node name="ScaleLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapScaleRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Scale:"

[node name="MapScaleSliderSpin" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/MapScaleRow" instance=ExtResource("3_slider_spin_box")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0
allow_greater = true

[node name="LightingSeparator" type="HSeparator" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2

[node name="LightingRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox"]
layout_mode = 2

[node name="LightingLabel" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/LightingRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Body"
text = "Lighting & Environment"

[node name="EditLightingButton" type="Button" parent="MainContainer/VBox/ContentSplit/LeftPanel/MapPanel/MapVBox/LightingRow"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Secondary"
text = "Edit..."

[node name="TokensPanel" type="PanelContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="TokensVBox" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="TokensHeader" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel/TokensVBox"]
layout_mode = 2

[node name="TokensTitle" type="Label" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel/TokensVBox/TokensHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SectionHeader"
text = "Token Placements"

[node name="AddTokenButton" type="Button" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel/TokensVBox/TokensHeader"]
unique_name_in_owner = true
layout_mode = 2
text = "+ Add Token"

[node name="PokemonSearch" type="LineEdit" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel/TokensVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
placeholder_text = "Search pokemon..."

[node name="TokenList" type="ItemList" parent="MainContainer/VBox/ContentSplit/LeftPanel/TokensPanel/TokensVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BoxContainerSpaced"

[node name="PlacementPanel" type="PanelContainer" parent="MainContainer/VBox/ContentSplit/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PlacementVBox" type="VBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel"]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="PlacementTitle" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2
theme_type_variation = &"SectionHeader"
text = "Token Properties"

[node name="PlacementPokemonLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Body"
text = "#25 Pikachu"

[node name="NameRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/NameRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Display Name:"

[node name="PlacementNameEdit" type="LineEdit" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/NameRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Token name..."

[node name="ChecksRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="PlacementShinyCheck" type="CheckBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ChecksRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Shiny"

[node name="PlacementPlayerCheck" type="CheckBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ChecksRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Player Controlled"

[node name="PlacementVisibleCheck" type="CheckBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ChecksRow"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Visible to Players"

[node name="Separator1" type="HSeparator" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2
theme_type_variation = &"H3"
text = "Health"

[node name="HealthRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="MaxHPLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/HealthRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Max HP:"

[node name="PlacementMaxHPSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/HealthRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 9999.0
value = 100.0

[node name="CurrentHPLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/HealthRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Current:"

[node name="PlacementCurrentHPSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/HealthRow"]
unique_name_in_owner = true
layout_mode = 2
max_value = 9999.0
value = 100.0

[node name="Separator2" type="HSeparator" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2
theme_type_variation = &"H3"
text = "Position"

[node name="PositionRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="XLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "X:"

[node name="PlacementPosXSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="YLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Y:"

[node name="PlacementPosYSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="ZLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Z:"

[node name="PlacementPosZSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/PositionRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="RotationRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="RotLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/RotationRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"H3"
text = "Rotation:"

[node name="PlacementRotationSpin" type="SpinBox" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/RotationRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = -360.0
max_value = 360.0
step = 5.0
suffix = "Â°"

[node name="ScaleRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="ScaleLabel" type="Label" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ScaleRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_type_variation = &"Body"
text = "Scale:"

[node name="PlacementScaleSliderSpin" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ScaleRow" instance=ExtResource("3_slider_spin_box")]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0
allow_greater = true

[node name="Spacer" type="Control" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsRow" type="HBoxContainer" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox"]
layout_mode = 2

[node name="ApplyPlacementButton" type="Button" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Success"
text = "Apply Changes"

[node name="DeletePlacementButton" type="Button" parent="MainContainer/VBox/ContentSplit/RightPanel/PlacementPanel/PlacementVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Danger"
text = "Delete Token"

[node name="StatusBar" type="HBoxContainer" parent="MainContainer/VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainContainer/VBox/StatusBar"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Caption"
text = "Ready"

[node name="MapFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Select Map File"
size = Vector2i(800, 600)
ok_button_text = "Select"

[node name="LoadDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Load Level"
size = Vector2i(500, 400)
ok_button_text = "Load"

[node name="LoadVBox" type="VBoxContainer" parent="LoadDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -42.0
theme_type_variation = &"BoxContainerSpaced"

[node name="LoadLabel" type="Label" parent="LoadDialog/LoadVBox"]
layout_mode = 2
theme_type_variation = &"Body"
text = "Select a level to load:"

[node name="SavedLevelsList" type="ItemList" parent="LoadDialog/LoadVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DeleteLevelButton" type="Button" parent="LoadDialog/LoadVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Danger"
text = "Delete Selected Level"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Delete Level"
size = Vector2i(769, 120)
ok_button_text = "Delete"
dialog_text = "Are you sure you want to delete this level? This cannot be undone."

[node name="ExportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Export Level as JSON"
size = Vector2i(800, 600)
ok_button_text = "Export"

[node name="ImportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Import Level from JSON"
size = Vector2i(800, 600)
ok_button_text = "Import"

[node name="PokemonSelectorPopup" type="Window" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Select Pokemon"
size = Vector2i(400, 500)
visible = false

[node name="VBox" type="VBoxContainer" parent="PokemonSelectorPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_type_variation = &"BoxContainerSpaced"

[node name="PokemonSelectorSearch" type="LineEdit" parent="PokemonSelectorPopup/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search pokemon..."

[node name="PokemonSelectorShiny" type="CheckBox" parent="PokemonSelectorPopup/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Shiny Variant"

[node name="PokemonSelectorList" type="ItemList" parent="PokemonSelectorPopup/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Hint" type="Label" parent="PokemonSelectorPopup/VBox"]
layout_mode = 2
theme_type_variation = &"Caption"
text = "Double-click to add token"

[node name="LightingModeContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="LightingModeContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="LightingModeContainer/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="LightingModeContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="LightingModeContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10, 15)

[node name="MapContainer" type="Node3D" parent="LightingModeContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="LightingEditorPanel" parent="LightingModeContainer" instance=ExtResource("2_lighting_panel")]
unique_name_in_owner = true
